discussion/kv_engine/130749/130749_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39991: Synchronize access to trace vector

The trace vector may be operated from multiple threads
(and reallocated). Make sure that we serialize this
access (and don't reallocate without letting other
threads know that the location isn't valid anymore)

Change-Id: I0addc4e4e75c3ff7ef87024f0cc8a5ccfd64ef01

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-06-17 09:38:14.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-17 10:42:17.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24622/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">1 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24622/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2798/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/cookie_trace_context.h:37:28: error: no type named "const_byte_buffer" in namespace "cb" [clang-diagnostic-error]
                       cb::const_byte_buffer rawKey,
                           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2798/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/cookie_trace_context.h:37:28:
error: no type named "const_byte_buffer" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2798/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4154/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0081/0099]: test dcp early termination...Exceeded maximum wait time of 60000000us waiting for stat "ep_dcp_num_running_backfills(dcp)" to be 0 (last value:1) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4154/ )

Failure of a CTest test [2020-06-17T09:53:29.398Z]   5/398 Test #247: ep_testsuite_dcp.full_eviction.comp_passive .......................................................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4154/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4291/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0007/0047]: multi set...Exceeded maximum wait time of 60000000us waiting for stat "ep_queue_size" to be 0 (last value:61864) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4291/ )

Failure of a CTest test [2020-06-17T09:50:12.687Z]  13/388 Test #233: ep_testsuite_basic.value_eviction.magma ...........................................................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4291/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3263/ : FAILURE

Compile error at [2020-06-17T09:40:19.048Z] ../magma/util/buffer_test.cc:89:12:
error: call to constructor of "magma::Buffer" is ambiguous
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3263/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1302/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28591/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4208/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12035/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
